# observability-dashboard

./: .env.example  .gitignore  README.md  projects.yaml  pyproject.toml  technical-report.html
backend/: alerts.py  config.py  db.py  main.py  metrics.py  scheduler.py  sheets.py
backend/tests/: test_fee_distribution.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: DatePicker.tsx  FeeDistribution.tsx  FilterBreakdown.tsx  FunnelChart.tsx  HealthChart.tsx  JsonTree.tsx  ListingsChart.tsx  LogStream.tsx  MetricCard.tsx  PhaseBreakdown.tsx  RunsTable.tsx  SpeedChart.tsx
frontend/src/pages/: Dashboard.tsx  RunDetail.tsx
